# GoResolver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
Plugin/GoResolver/: goresolver_ghidra.py  goresolver_ida.py  ida-plugin.json  ida_config_form.py
Plugin/GoResolver/common/: __init__.py  action_modes.py  chan_dirs.py  goresolver_plugin.py  plugin_exceptions.py  sre_interface.py  sre_stream_handler.py  type_kind.py
src/volexity/goresolver/: cli.py  go_compare.py
src/volexity/goresolver/buildinfo/: __init__.py  go_buildinfo_parser.py
src/volexity/goresolver/models/: cli_arguments.py  go_version.py  symbol_report.py  symbol_source.py  symbol_tree.py
src/volexity/goresolver/sym/: __init__.py  arch.py  binary.py  binary_reader.py  cstr.py  endian.py  func.py  go_sym_parser.py  go_type_parser.py  pc_line_magic.py  pc_line_table.py  signature.py  slice.py  type_flags.py  type_kinds.py
src/volexity/goresolver/sym/module_data_models/: __init__.py  module_data.py  module_data_1_02.py  module_data_1_16.py  module_data_1_18.py  module_data_1_20.py
tests/: test_goresolver.py
